--- a/packages/block-library/src/style.scss
+++ b/packages/block-library/src/style.scss
@@ -26,6 +26,7 @@
 @import "./page-list/style.scss";
 @import "./paragraph/style.scss";
 @import "./post-author/style.scss";
+@import "./post-comments/style.scss";
 @import "./post-comments-form/style.scss";
 @import "./preformatted/style.scss";
 @import "./pullquote/style.scss";
