--- a/packages/block-editor/src/style.scss
+++ b/packages/block-editor/src/style.scss
@@ -33,6 +33,7 @@
 @import "./components/contrast-checker/style.scss";
 @import "./components/default-block-appender/style.scss";
 @import "./components/font-appearance-control/style.scss";
+@import "./components/heading-level-control/style.scss";
 @import "./components/justify-content-control/style.scss";
 @import "./components/link-control/style.scss";
 @import "./components/line-height-control/style.scss";
